--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
@@ -13,9 +13,9 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-{{#vendorExtensions.bodyIsSelf}}        getDataStore().save(this);
+{{#vendorExtensions.bodyIsSelf}}        getDataStore().save(href, this);
         {{#returnType}}return this;{{/returnType}}{{/vendorExtensions.bodyIsSelf}}{{^vendorExtensions.bodyIsSelf}}{{#bodyParam}}
-        getDataStore().save({{bodyParam.paramName}});
+        getDataStore().save(href, {{bodyParam.paramName}});
         {{#returnType}}return {{/returnType}} {{bodyParam.paramName}};{{/bodyParam}}{{^bodyParam}}
-        getDataStore().create(href, new VoidResource(getDataStore()));
+        getDataStore().save(href, new DefaultVoidResource(getDataStore()));
         {{#returnType}}return this;{{/returnType}}{{/bodyParam}}{{/vendorExtensions.bodyIsSelf}}
