--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -45,7 +45,7 @@ import java.util.Map;
     @javax.annotation.Generated(
             value = "{{generatorClass}}",
             date  = "{{generatedDate}}")
-    public class {{classname}} extends AbstractClient implements {{interfaceClassname}} {
+    public class {{classname}} extends AbstractClient {
 
     /**
     * Instantiates a new Client instance that will communicate with the Okta REST API.  See the class-level
