--- a/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
@@ -14,6 +14,7 @@
     limitations under the License.
 }}
 import java.util.Map;
+import com.okta.sdk.resource.Resource;
 
 {{#models}}{{#model}}
 /**
@@ -26,10 +27,10 @@ public interface {{classname}} extends Resource{{#vendorExtensions.x-okta-extens
     {{#vendorExtensions.extraAnnotation}}
         {{{vendorExtensions.extraAnnotation}}}
     {{/vendorExtensions.extraAnnotation}}
-    public {{{datatypeWithEnum}}} {{getter}}();
+    {{{datatypeWithEnum}}} {{getter}}();
 
 {{^isReadOnly}}
-    public {{classname}} {{setter}}({{{datatypeWithEnum}}} {{name}});
+    {{classname}} {{setter}}({{{datatypeWithEnum}}} {{name}});
 {{/isReadOnly}}
 
 {{#isEnum}}
