--- a/swagger-templates/src/main/resources/OktaJava/modelListResourceInterface.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelListResourceInterface.mustache
@@ -14,6 +14,8 @@
     limitations under the License.
 }}
 
+import com.okta.sdk.resource.CollectionResource;
+
 /**
 * {{#description}}{{.}}{{/description}}{{^description}}{{classname}}{{/description}}
 */
