--- a/swagger-templates/src/main/resources/OktaJavaImpl/model.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/model.mustache
@@ -15,7 +15,8 @@
 }}
 {{>licenseInfo}}
 
-package {{package}};
+{{! this is a hack to get sub package name generations working with swagger }}
+package {{package}}{{#models}}{{#model}}{{#vendorExtensions.x-okta-package}}.{{vendorExtensions.x-okta-package}}{{/vendorExtensions.x-okta-package}}{{/model}}{{/models}};
 
 {{#imports}}
 import {{import}};
