--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelListResourceImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelListResourceImpl.mustache
@@ -14,10 +14,10 @@
     limitations under the License.
 }}
 
-import com.okta.sdk.resource.*;
 import com.okta.sdk.impl.ds.InternalDataStore;
 import com.okta.sdk.impl.resource.AbstractCollectionResource;
 import com.okta.sdk.impl.resource.Property;
+import com.okta.sdk.impl.resource.ArrayProperty;
 
 import java.util.Collections;
 import java.util.Map;
