Added initial support for the Factors API

--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPost.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPost.mustache
@@ -13,4 +13,5 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-        {{#returnType}}return {{/returnType}}getDataStore().create(href, {{#vendorExtensions.bodyIsSelf}}this{{/vendorExtensions.bodyIsSelf}}{{^vendorExtensions.bodyIsSelf}}{{bodyParam.paramName}}{{/vendorExtensions.bodyIsSelf}}{{^bodyParam}}new DefaultVoidResource(getDataStore()){{/bodyParam}}{{#returnType}}, {{returnType}}.class{{/returnType}});
+        {{#returnType}}{{^vendorExtensions.updateBody}}return {{/vendorExtensions.updateBody}}{{/returnType}}getDataStore().create(href, {{#vendorExtensions.bodyIsSelf}}this{{/vendorExtensions.bodyIsSelf}}{{^vendorExtensions.bodyIsSelf}}{{bodyParam.paramName}}{{/vendorExtensions.bodyIsSelf}}{{^bodyParam}}new DefaultVoidResource(getDataStore()){{/bodyParam}}{{#returnType}}, {{#vendorExtensions.updateBody}}{{bodyParam.paramName}}.getClass(){{/vendorExtensions.updateBody}}{{^vendorExtensions.updateBody}}{{returnType}}.class{{/vendorExtensions.updateBody}}{{/returnType}});{{#returnType}}{{#vendorExtensions.updateBody}}
+        return {{bodyParam.paramName}};{{/vendorExtensions.updateBody}}{{/returnType}}
