--- a/swagger-templates/src/main/resources/OktaJavaImpl/queryPartial.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/queryPartial.mustache
@@ -16,6 +16,7 @@
 {{^queryParams.isEmpty}}        QueryString queryArgs = new QueryString();{{#queryParams}}
         if ({{paramName}} != null) queryArgs.put("{{baseName}}", {{paramName}});{{/queryParams}}
 
-        String href = QueryString.buildHref("{{{vendorExtensions.hrefFiltered}}}", queryArgs);{{/queryParams.isEmpty}}
-{{#queryParams.isEmpty}}        String href = "{{{vendorExtensions.hrefFiltered}}}";
+        String href = QueryString.buildHref("{{{vendorExtensions.hrefFiltered}}}", queryArgs);
+{{/queryParams.isEmpty}}{{#queryParams.isEmpty}}
+        String href = "{{{vendorExtensions.hrefFiltered}}}";
 {{/queryParams.isEmpty}}
