--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -49,8 +49,8 @@ public class Default{{classname}} extends {{#parent}}{{.}}{{/parent}}{{^parent}}
     private final static Map<String, Property> PROPERTY_DESCRIPTORS = createPropertyDescriptorMap({{#vars}}{{name}}Property{{^-last}}, {{/-last}}{{/vars}});
 
     public Default{{classname}}(InternalDataStore dataStore) {
-        super(dataStore);
-        {{{vendorExtensions.defaultSetter}}}
+        super(dataStore);{{#vendorExtensions.defaultSetter}}
+        setProperty("{{key}}", "{{value}}");{{/vendorExtensions.defaultSetter}}
     }
 
     public Default{{classname}}(InternalDataStore dataStore, Map<String, Object> properties) {
