--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -23,6 +23,7 @@ import com.okta.sdk.impl.http.QueryString;
 {{! TODO: add these programatically when needed }}
 import com.okta.sdk.impl.resource.BooleanProperty;
 import com.okta.sdk.impl.resource.IntegerProperty;
+import com.okta.sdk.impl.resource.DoubleProperty;
 import com.okta.sdk.impl.resource.StringProperty;
 import com.okta.sdk.impl.resource.ListProperty;
 import com.okta.sdk.impl.resource.EnumListProperty;
