Minor doc fix for generated Enums

--- a/swagger-templates/src/main/resources/OktaJava/modelInnerEnum.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelInnerEnum.mustache
@@ -14,7 +14,7 @@
     limitations under the License.
 }}
   /**
-   * {{^description}}Gets or Sets {{{name}}}{{/description}}{{#description}}{{{description}}}{{/description}}
+   * {{^description}}Enum {{{name}}}{{/description}}{{#description}}{{{description}}}{{/description}}
    */
   public enum {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{classname}}{{/datatypeWithEnum}} {
     {{#gson}}
