--- a/swagger-templates/src/main/resources/OktaJava/modelEnum.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelEnum.mustache
@@ -15,7 +15,7 @@
 }}
 
 /**
- * {{^description}}Gets or Sets {{{name}}}{{/description}}{{#description}}{{{description}}}{{/description}}
+ * {{^description}}Enum {{{name}}}{{/description}}{{#description}}{{{description}}}{{/description}}
  */
 public enum {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} {
 
