--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelEnum.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelEnum.mustache
@@ -18,7 +18,7 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 {{/jackson}}
 
 /**
- * {{^description}}Gets or Sets {{{name}}}{{/description}}{{#description}}{{{description}}}{{/description}}
+ * {{^description}}Enum {{{name}}}{{/description}}{{#description}}{{{description}}}{{/description}}
  */
 public enum {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} {
   {{#gson}}
