--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -36,6 +36,9 @@ import com.okta.sdk.resource.VoidResource;
 
 import java.util.Map;
 
+import static com.okta.sdk.lang.Assert.notNull;
+import static com.okta.sdk.lang.Assert.hasText;
+
 {{#models}}{{#model}}
 /**
  * {{#description}}{{.}}{{/description}}{{^description}}{{classname}}{{/description}}
