Expose property util methods to any generated object marked with 'x-okta-extensible' i.e. UserProfile
This adds the following methods to mimic what Okta supports with custom profile schemas:

    String getString(String key);
    Double getNumber(String key);
    Boolean getBoolean(String key);
    Integer getInteger(String key);
    List<String> getStringList(String key);
    List<Double> getNumberList(String key);
    List<Integer> getIntegerList(String key);

Fixes: #130

--- a/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
@@ -17,13 +17,13 @@ import java.util.Map;
 import com.okta.sdk.resource.Resource;
 import com.okta.sdk.resource.Deletable;
 import com.okta.sdk.resource.Saveable;
-
+{{#vendorExtensions.x-okta-extensible}}import com.okta.sdk.resource.PropertyRetriever;{{/vendorExtensions.x-okta-extensible}}
 {{#models}}{{#model}}
 /**
  * {{#description}}{{.}}{{/description}}{{^description}}{{classname}}{{/description}}
  */
 {{>generatedAnnotation}}{{#discriminator}}{{>typeInfoAnnotation}}{{/discriminator}}
-public interface {{classname}} extends Resource{{#parent}}, {{.}}{{/parent}}{{#vendorExtensions.x-okta-extensible}}, Map<String, Object>{{/vendorExtensions.x-okta-extensible}}{{#vendorExtensions.deletable}}, Deletable{{/vendorExtensions.deletable}} {
+public interface {{classname}} extends Resource{{#parent}}, {{.}}{{/parent}}{{#vendorExtensions.x-okta-extensible}}, PropertyRetriever, Map<String, Object>{{/vendorExtensions.x-okta-extensible}}{{#vendorExtensions.deletable}}, Deletable{{/vendorExtensions.deletable}} {
 
 {{#vars}}
     {{#vendorExtensions.extraAnnotation}}
