Adding caching strategy interface, moving caching logic from read/write filter to the new strategy
Updated InternalDataStore to pass more context through to ResourceDataRequest in order to allow caching
strategy to make decisions and invalidate cache when RPC methods are called

--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -91,7 +91,18 @@ import static com.okta.sdk.lang.Assert.hasText;
             comments = "{{httpMethod}} - {{path}}")
     public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) {
 {{>queryPartial}}
-{{#vendorExtensions.isGet}}{{>apiMethodGet}}{{/vendorExtensions.isGet}}{{#vendorExtensions.isPut}}{{>apiMethodPut}}{{/vendorExtensions.isPut}}{{#vendorExtensions.isPost}}{{>apiMethodPost}}{{/vendorExtensions.isPost}}{{#vendorExtensions.isDelete}}{{>apiMethodDelete}}{{/vendorExtensions.isDelete}}
+{{#vendorExtensions.isGet}}
+{{>apiMethodGet}}
+{{/vendorExtensions.isGet}}
+{{#vendorExtensions.isPut}}
+{{>apiMethodPut}}
+{{/vendorExtensions.isPut}}
+{{#vendorExtensions.isPost}}
+{{>apiMethodPostClient}}
+{{/vendorExtensions.isPost}}
+{{#vendorExtensions.isDelete}}
+{{>apiMethodDelete}}
+{{/vendorExtensions.isDelete}}
     }
 
 {{#vendorExtensions.hasOptional}}
@@ -112,9 +123,26 @@ import static com.okta.sdk.lang.Assert.hasText;
             comments = "{{httpMethod}} - {{path}}")
     public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#vendorExtensions.nonOptionalParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/vendorExtensions.nonOptionalParams}}) {
 {{>queryPartialRequired}}
-{{#vendorExtensions.isGet}}{{>apiMethodGet}}{{/vendorExtensions.isGet}}{{#vendorExtensions.isPut}}{{>apiMethodPut}}{{/vendorExtensions.isPut}}{{#vendorExtensions.isPost}}{{#vendorExtensions.optionalBody}}{{>apiMethodPostNoBody}}{{/vendorExtensions.optionalBody}}{{^vendorExtensions.optionalBody}}{{>apiMethodPost}}{{/vendorExtensions.optionalBody}}{{/vendorExtensions.isPost}}{{#vendorExtensions.isDelete}}{{>apiMethodDelete}}{{/vendorExtensions.isDelete}}
+{{#vendorExtensions.isGet}}
+{{>apiMethodGet}}
+{{/vendorExtensions.isGet}}
+{{#vendorExtensions.isPut}}
+{{>apiMethodPut}}
+{{/vendorExtensions.isPut}}
+{{#vendorExtensions.isPost}}
+{{#vendorExtensions.optionalBody}}
+{{>apiMethodPostNoBody}}
+{{/vendorExtensions.optionalBody}}
+{{^vendorExtensions.optionalBody}}
+{{>apiMethodPostClient}}
+{{/vendorExtensions.optionalBody}}
+{{/vendorExtensions.isPost}}
+{{#vendorExtensions.isDelete}}
+{{>apiMethodDelete}}
+{{/vendorExtensions.isDelete}}
     }
-{{/vendorExtensions.hasOptional}}{{/vendorExtensions.moved}}{{/operation}}
-
+{{/vendorExtensions.hasOptional}}
+{{/vendorExtensions.moved}}
+{{/operation}}
 }
 {{/operations}}
