--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPostNoBody.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPostNoBody.mustache
@@ -13,4 +13,4 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-        {{#returnType}}return {{/returnType}}getDataStore().create(href, {{#vendorExtensions.bodyIsSelf}}this{{/vendorExtensions.bodyIsSelf}}{{^vendorExtensions.bodyIsSelf}}new DefaultVoidResource(getDataStore()){{/vendorExtensions.bodyIsSelf}}{{#returnType}}, {{returnType}}.class{{/returnType}});
+        {{#returnType}}return {{/returnType}}getDataStore().create(href, {{#vendorExtensions.bodyIsSelf}}this{{/vendorExtensions.bodyIsSelf}}{{^vendorExtensions.bodyIsSelf}}new DefaultVoidResource(getDataStore()){{/vendorExtensions.bodyIsSelf}}, null{{#returnType}}, {{returnType}}.class{{/returnType}});
