Allow for optional bodies.
`User.forgotPassword()` has an optional arg `UserCredentials`.  If this argument can now be null.
Included IT

Fixes: #146

--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPostResource.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPostResource.mustache
@@ -27,7 +27,12 @@
         {{/vendorExtensions.bodyIsSelf}}
         {{^vendorExtensions.bodyIsSelf}}
             {{#bodyParam}}
+                {{#bodyParam.required}}
             {{bodyParam.paramName}},
+                {{/bodyParam.required}}
+                {{^bodyParam.required}}
+            ({{bodyParam.paramName}} != null) ? {{bodyParam.paramName}} : getDataStore().instantiate(VoidResource.class),
+                {{/bodyParam.required}}
             {{/bodyParam}}
         {{/vendorExtensions.bodyIsSelf}}
         {{^bodyParam}}
